Blender 4.2 - Compress Saving option gets removed when recovering from AutoSave #126821
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#126821
Loading…
Reference in New Issue
Block a user
No description provided.
Delete Branch "%!s()"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Operating system: Windows 10
Graphics card: RTX 3080
Blender Version
Broken: 4.2 (also tested in
7c68ac258f
and also didnt work, but 4.2 LTS is the more important version)Worked: 4.1.1
Worked: 3.5.1
Caused by
efb511a76d
Short description of error
Compress Saving option gets removed when recovering from AutoSave (as well as blend file name and save location)
Exact steps for others to reproduce the error
Can confirm, was still working in 4.1.1, will check
Caused by
efb511a76d
Reading the commit message and https://devtalk.blender.org/t/remove-support-for-saving-memfile-undo-steps-as-blend-files-proposal/33544/14 explains why we loose the original file name and save location (which is a tad sad), not sure about the
Compress
setting.CC @JacquesLucke (setting this to High Severity to get attention even though the reality might be that
efb511a76d
was a change that we now have to live with -- because the tradeoff pays off in other areas)Ideally both the filename / location and compression would return back to the way it was. Whilst the new version is 'technically' it is better, our artists never complained about the lockups that an autosave would create.
Worst case, can we get the quit.blend / autosave files, to default to the system default of whether compression is turned on / off?
This shouldn't really be a fundamental limitation of the changes we did to auto-save, it's more like something that was overlooked.
I did notice that there is this line:
const int fileflags = G.fileflags & ~G_FILE_COMPRESS;
This disables compression, but that ideally shouldn't affect the state of the option after loading
quit.blend
.